[package]
name = "quixelart"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"

[dependencies]
# iced = { version = "0.1", features = ["image"] }
nfd2 = "0.2"
subprocess = "0.2"

[dependencies.iced]
git = "https://github.com/hecrj/iced.git"
rev = "ea1a7248d257c7c9e4a1f3989e68b58a6bc0c4ff"
features = ["image"]